<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.virtualevan.boolecuit.view.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Expresión Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_expression"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/ed_expresion"
                android:enabled="false"
                android:maxEms="4"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_a"
                android:layout_weight="1" />

            <Button
                android:text="@string/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_b"
                android:layout_weight="1" />

            <Button
                android:text="@string/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_c"
                android:layout_weight="1" />

            <Button
                android:text="@string/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_d"
                android:layout_weight="1" />

            <Button
                android:text="@string/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_e"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_and"
                android:layout_weight="1" />

            <Button
                android:text="@string/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_or"
                android:layout_weight="1" />

            <Button
                android:text="@string/not"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_not"
                android:layout_weight="1" />

            <Button
                android:text="@string/left_parenthesis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_left"
                android:layout_weight="1" />

            <Button
                android:text="@string/right_parenthesis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_right"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/backspace"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:id="@+id/bt_backspace"
                android:layout_weight="1.00" />

            <Button
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/bt_reset"
                android:layout_weight="1.00" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/eval"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:id="@+id/bt_evaluar"
                android:background="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
